# TinyPathTracing

./: .gitmodules  CMakeLists.txt  README.md  result-unitSphere.ppm
src/: Camera.hpp  Image.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  main.cpp
src/accelerator/: BVH.cpp  BVH.hpp
src/common/: Tools.hpp
src/geometry/: AxisAlignedBox.hpp  AxisAlignedRectangle.hpp  BoundingBox.hpp  Bounds.hpp  ConstantMedium.hpp  MeshTriangle.cpp  MeshTriangle.hpp  MovingSphere.hpp  OBJ_Loader.hpp  Object.hpp  ObjectGroup.hpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/geometry/transform/: Rotation.hpp  Translation.hpp
src/material/: Dielectric.hpp  Diffuse.hpp  DiffuseLight.hpp  Isotropic.hpp  Material.cpp  Material.hpp  Metal.hpp
src/noise/: PerlinNoise.hpp
src/texture/: CheckerTexture.hpp  ImageTexture.hpp  NoiseTexture.hpp  SolidColor.hpp  Texture.hpp
